[gd_scene load_steps=6 format=3 uid="uid://vwv315puhc57"]

[ext_resource type="Script" path="res://Scripts/mouth.gd" id="1_si3ki"]
[ext_resource type="Texture2D" uid="uid://b4qk8prmry0jr" path="res://Assets/Image/Mouth/mouth_closed.png" id="2_bvlwf"]
[ext_resource type="Texture2D" uid="uid://cko0xk6vlhsuo" path="res://Assets/Image/Mouth/mouth_open.png" id="3_3cvpb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_301x3"]
size = Vector2(290, 254)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rejl6"]
radius = 45.0
height = 118.0

[node name="Mouth" type="Node2D"]
script = ExtResource("1_si3ki")

[node name="MouthClosed" type="Sprite2D" parent="."]
texture = ExtResource("2_bvlwf")

[node name="ProximityArea" type="Area2D" parent="MouthClosed"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouthClosed/ProximityArea"]
shape = SubResource("RectangleShape2D_301x3")

[node name="MouthOpen" type="Sprite2D" parent="."]
texture = ExtResource("3_3cvpb")

[node name="EatArea" type="Area2D" parent="MouthOpen"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouthOpen/EatArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rejl6")

[node name="Center" type="Marker2D" parent="."]

[connection signal="body_entered" from="MouthClosed/ProximityArea" to="." method="_on_proximity_area_body_entered"]
[connection signal="body_exited" from="MouthClosed/ProximityArea" to="." method="_on_proximity_area_body_exited"]
[connection signal="body_entered" from="MouthOpen/EatArea" to="." method="_on_eat_area_body_entered"]
